--- a/packages/yasgui/src/themes.scss
+++ b/packages/yasgui/src/themes.scss
@@ -39,7 +39,7 @@
   --yasgui-match-highlight-bg: #dbdeed;
 
   // Layout dimensions (used for horizontal orientation)
-  --yasgui-header-height: 100px; // Height to subtract from viewport in horizontal layout
+  --yasgui-header-height: 150px; // Height to subtract from viewport in horizontal layout
   --yasgui-min-height: 400px; // Minimum height for horizontal layout panels
 
   --yasgui-endpoint-button-bg: #337ab7;
